@@ -1,10 +1,10 @@
 /***************************************************************************
-                          playlistitem.cpp  -  description
-                             -------------------
-    begin                : Die Dez 3 2002
-    copyright            : (C) 2002 by Mark Kretschmann
-    email                :
- ***************************************************************************/
+                        playlistitem.cpp  -  description
+                           -------------------
+  begin                : Die Dez 3 2002
+  copyright            : (C) 2002 by Mark Kretschmann
+  email                :
+***************************************************************************/
 
 /***************************************************************************
  *                                                                         *
@@ -20,6 +20,8 @@
 #include "playlistwidget.h"
 #include "browserwin.h"
 
+#include <string.h>
+
 #include <qlistview.h>
 #include <qmessagebox.h>
 #include <qpainter.h>
@@ -29,10 +31,12 @@
 
 #include <kdebug.h>
 #include <kurl.h>
-#include <kfilemetainfo.h>
+
+#include <fileref.h>
+#include <tag.h>
 
 PlaylistItem::PlaylistItem( QListView* parent, const KURL &url ) :
-QListViewItem( parent, nameForUrl( url ) )
+        QListViewItem( parent, nameForUrl( url ) )
 {
 
     m_url = url;
@@ -42,7 +46,7 @@ QListViewItem( parent, nameForUrl( url ) )
 
 
 PlaylistItem::PlaylistItem( QListView* parent, QListViewItem *after, const KURL &url ) :
-QListViewItem( parent, after )
+        QListViewItem( parent, after )
 {
     m_url = url;
     init();
@@ -51,14 +55,13 @@ QListViewItem( parent, after )
 }
 
 
-
 PlaylistItem::~PlaylistItem()
 {
     if ( listView() )
     {
-        if ( QString( listView()->name() ) == "PlaylistWidget" )
+        if ( QString( listView() ->name() ) == "PlaylistWidget" )
         {
-            PlaylistWidget *parentView = static_cast<PlaylistWidget*>( listView() );
+            PlaylistWidget * parentView = static_cast<PlaylistWidget*>( listView() );
 
             if ( parentView->currentTrack() == this )
             {
@@ -66,15 +69,12 @@ PlaylistItem::~PlaylistItem()
             }
         }
     }
-
-    delete m_pMetaInfo;
 }
-
 
 
 void PlaylistItem::init()
 {
-    m_pMetaInfo = NULL;
+    m_hasMetaInfo = false;
     m_isDir = false;
     m_bIsGlowing = false;
     setDragEnabled( true );
@@ -82,10 +82,9 @@ void PlaylistItem::init()
 }
 
 
-
 QString PlaylistItem::nameForUrl( const KURL &url ) const
 {
-// only files have a filename.. for all other protocols the url itself is used as the name
+    // only files have a filename.. for all other protocols the url itself is used as the name
     if ( url.protocol() == "file" )
         return url.fileName();
     else
@@ -99,39 +98,43 @@ void PlaylistItem::readMetaInfo()
 {
     if ( m_url.protocol() == "file" )
     {
-        m_pMetaInfo = new KFileMetaInfo( m_url.path(), QString::null, KFileMetaInfo::Everything );
-    }
-}
+        m_hasMetaInfo = true;
 
+        TagLib::String str( m_url.path().utf8().data(), TagLib::String::UTF8 );
+        TagLib::FileRef f( str );
 
-
-KFileMetaInfo* PlaylistItem::metaInfo()
-{
-    return m_pMetaInfo;
-}
-
-
-
-void PlaylistItem::setMetaTitle()
-{
-    if ( m_pMetaInfo)
-    {
-        if ( m_pMetaInfo->isValid() && !m_pMetaInfo->isEmpty() )
+        if ( !f.isNull() && f.tag() )
         {
-            if ( m_pMetaInfo->item( "Title" ).string() != "---" )
-            {
-                QString str;
+            TagLib::Tag * tag = f.tag();
 
-                str += m_pMetaInfo->item( "Artist" ).string();
-                str += " - ";
-                str += m_pMetaInfo->item( "Title" ).string();
-
-                setText( 0, str );
-            }
+            m_tagTitle = QString( tag->title().toCString() );
+            m_tagArtist = QString( tag->artist().toCString() );
+            m_tagAlbum = QString( tag->album().toCString() );
+            m_tagYear = QString().setNum( tag->year() );
+            m_tagComment = QString( tag->comment().toCString() );
+            m_tagGenre = QString( tag->genre().toCString() );
         }
     }
 }
 
+
+bool PlaylistItem::hasMetaInfo()
+{
+    return m_hasMetaInfo;
+}
+
+
+void PlaylistItem::setMetaTitle()
+{
+    if ( !m_tagTitle.isEmpty() )
+        setText( 0, m_tagTitle );
+
+    setText( 1, m_tagArtist );
+    setText( 2, m_tagAlbum );
+    setText( 3, m_tagYear );
+    setText( 4, m_tagComment );
+    setText( 5, m_tagGenre );
+}
 
 
 bool PlaylistItem::isDir()
@@ -140,15 +143,13 @@ bool PlaylistItem::isDir()
 }
 
 
-
 void PlaylistItem::setDir( bool on )
 {
-     m_isDir = on;
+    m_isDir = on;
 }
 
 
-
-void PlaylistItem::paintCell( QPainter* p, const QColorGroup& /*cg*/, int /*column*/, int width, int align )
+void PlaylistItem::paintCell( QPainter * p, const QColorGroup & cg, int column, int width, int align )
 {
     QColor col( 0x80, 0xa0, 0xff );
     int margin = 1;
@@ -179,10 +180,10 @@ void PlaylistItem::paintCell( QPainter* p, const QColorGroup& /*cg*/, int /*colu
     if ( pixmap( 0 ) )
     {
         pPainterBuf.drawPixmap( margin, 0, *pixmap( 0 ) );
-        margin += pixmap( 0 )->width() + 1;
+        margin += pixmap( 0 ) ->width() + 1;
     }
 
-    pPainterBuf.drawText( margin, 0, width-margin, height(), align, text(0) );
+    pPainterBuf.drawText( margin, 0, width - margin, height(), align, text( column ) );
     pPainterBuf.end();
     p->drawPixmap( 0, 0, *pBufPixmap );
 
@@ -190,8 +191,6 @@ void PlaylistItem::paintCell( QPainter* p, const QColorGroup& /*cg*/, int /*colu
 }
 
 
-
 // paintFocus is an empty dummy function to disable focus drawing
 void PlaylistItem::paintFocus( QPainter* /*p*/, const QColorGroup& /*cg*/, const QRect& /*r*/ )
-{
-}
+{}
