@@ -3,6 +3,12 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann. GPL License.
 
 
+VERSION HEAD:
+  * added: additional columns in playlist for tags
+  * fixed: made metainfo reading algorithm faster
+  * change: switched to TagLib for metainfo reading
+  * add: button "play" in PlayerWidget.cpp is now a toggleButton
+
 VERSION 0.6.0:
   * Release :)
 
